force-app/main/default/objects/AppliedPayment__c/AppliedPayment__c.object-meta.xml
<CustomObject>
    <description>Junction object that spilts a completed Payment record amount and applies to the related Order or Invoice Lines objects.</description>
    <label>Applied Payment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>