force-app/main/default/objects/AppliedPayment__c/fields/AmountApplied__c.field-meta.xml
<CustomField>
    <fullName>AmountApplied__c</fullName>
    <label>Amount Applied</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>