force-app/main/default/objects/AppliedPayment__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Number</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Applied Payments</relationshipLabel>
    <relationshipName>Applied_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>