force-app/main/default/objects/AppliedPayment__c/fields/InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>InvoiceLine__c</referenceTo>
    <relationshipLabel>Applied Payments</relationshipLabel>
    <relationshipName>Applied_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>