force-app/main/default/objects/AppliedPayment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment Name</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Applied Payments</relationshipLabel>
    <relationshipName>Applied_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>