force-app/main/default/objects/AppliedPayment__c/fields/PaymentProcessor__c.field-meta.xml
<CustomField>
    <fullName>PaymentProcessor__c</fullName>
    <formula>text( Payment__r.Payment_Processor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Processor</label>
    <type>Text</type>
</CustomField>