force-app/main/default/objects/AppliedPayment__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <formula>text( Payment__r.Payment_Type__c )</formula>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>