force-app/main/default/objects/AppliedPayment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>Text(Payment__r.Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>