force-app/main/default/objects/AppliedPayment__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <formula>Payment__r.Transaction_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Id</label>
    <type>Text</type>
</CustomField>