force-app/main/default/objects/AppliedPayment__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <formula>text( Payment__r.Transaction_Type__c )</formula>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>