force-app/main/default/objects/AppliedPayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment__c</columns>
    <columns>AmountApplied__c</columns>
    <columns>Status__c</columns>
    <columns>TransactionType__c</columns>
    <columns>PaymentType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>completed</value>
    </filters>
    <label>All</label>
</ListView>